# a

./: .gitignore  Makefile  pyproject.toml
object_on_image/: __init__.py  controllers.py  prediction_models.py  resources.py  settings.py
tests/: test_object_on_image.py
