[tool.poetry]
name = "ObjectOnImage"
version = "0.1.0"
description = "Check if an object on the given image"
authors = ["ShudelEV <e.shudel@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
gunicorn = "^20.0.4"
falcon = "^2.0.0"
keras = "2.3.*"
opencv-python = "3.*"
tensorflow = "2.1"
scikit-learn = "^0.22.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
